# tox-extra

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .yamllint  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: release-drafter.yml  release.yml  tox.yml
src/tox_extra/: __init__.py  bindep.py  common.py  hooks.py  tox3.py  tox4.py
src/tox_strict/: hooks.py
tests/: __init__.py  test_bindep.py  test_plugin.py
tests/fixtures/bindep_0/: bindep.txt  tox.ini
tests/fixtures/bindep_1/: bindep.txt
tests/fixtures/bindep_2/: bindep.txt
