[build-system]
requires = [
  "setuptools_scm[toml] >= 7.0.0",
]
build-backend = "setuptools.build_meta"

[project]
# https://peps.python.org/pep-0621/#readme
requires-python = ">=3.7"
dynamic = ["version"]

name = "tox-extra"
description = "Performs extra checks before or after running"
readme = "README.md"
authors = [
    {"name"="Sorin Sbarnea", "email"="sorin.sbarnea@gmail.com"}
]
maintainers = [
    {"name"="Sorin Sbarnea", "email"="sorin.sbarnea@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: tox",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]
keywords = ["git", "tox", "tox-plugin"]
dependencies = [
  "gitpython",
  "tox>=3.18",  # allowlist_externals
  "packaging",
]

[project.urls]
homepage = "https://github.com/tox-dev/tox-extra"
issues = "https://github.com/tox-dev/tox-extra/issues"
repository = "https://github.com/tox-dev/tox-extra"
changelog = "https://github.com/tox-dev/tox-extra/releases"

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
]

[project.entry-points.tox]
extra = "tox_extra.hooks"

[tool.coverage.run]
parallel = true

[tool.coverage.report]
omit = [".tox/*/lib/python*/site-packages/*"]
include = "src/*"
# fail under this percent
fail_under = 92.0

[tool.coverage.paths]
source = ["src"]

[tool.isort]
profile = "black"

[tool.setuptools_scm]
local_scheme = "no-local-version"
